# libsacc

./: .gitignore  Makefile.am  NEWS  README  configure.ac
include/: sacc.h
src/: .gitignore  Makefile.am  checks.h  condition.c  condition.h  css.lex  css.y  declaration.c  declaration.h  dimen_value.c  dimen_value.h  gcc.h  grammar.y  lexical_unit.c  lexical_unit.h  lexis.l  list.c  list.h  media_query.c  media_query.h  mlex.c  mpool.c  mpool.h  mpool_extra.c  mpool_extra.h  page_margin.c  page_margin.h  pair.h  parser.c  parser.h  rule.c  rule.h  sacc.pc.in  selector.c  selector.h  string_extra.c  string_extra.h  style_unit.c  style_unit.h  stylesheet.lex  (+17 more)
tests/: .gitignore  Makefile.am  parser.c  parser.h  sacc.c  stream.c  stream.h  test_condition.c  test_condition.h  test_dimen_value.c  test_dimen_value.h  test_lexical_unit.c  test_lexical_unit.h  test_list.c  test_list.h  test_media_query.c  test_media_query.h  test_mpool.c  test_mpool.h  test_page_margin.c  test_page_margin.h  test_parser.c  test_parser.h  test_selector.c  test_selector.h  test_suite.c  test_utils.c  test_utils.h  test_vector.c  test_vector.h
tests/data/: 10_declarations.css  10_declarations.xml  10_declarations_01.css  10_declarations_01.xml  11_declarations_errors.css  11_declarations_errors.xml  12_declarations_empty.xml  20_selectors.css  20_selectors.xml  20_selectors_01.css  20_selectors_01.xml  21_selectors_error.css  21_selectors_error.xml  22_pageselectors.css  22_pageselectors.xml  23_pageselectors_malformed.css  23_pageselectors_malformed.xml  24_pageselectors_invalid.css  24_pageselectors_invalid.xml  30_rule.xml  30_rule_01.css  31_rule_errors.css  31_rule_errors.xml  32_rule_page.css  32_rule_page.xml  400_stylesheet.css  400_stylesheet.xml  401_stylesheet_decllist.css  401_stylesheet_decllist.xml  402_stylesheet_errors.css  402_stylesheet_errors.xml  403_stylesheet_malformed_declarations.xml  404_stylesheet_malformed_selectors.xml  405_stylesheet_malformed_statements.xml  406_stylesheet_unknown_at.css  406_stylesheet_unknown_at.xml  407_stylesheet_unexpected_eos.css  407_stylesheet_unexpected_eos.xml  408_stylesheet_unexpected_eof.xml  409_stylesheet_at_order.xml  (+42 more)
